Arreglado CRUD de libros y categorías, incluyendo soft delete y búsqueda